增加查询某时间段的奖励
