# app/admin/router/data_hub.go
@@ -24,5 +24,6 @@ func registerDataHubUserRouter(v1 *gin.RouterGroup, authMiddleware *jwt.GinJWTMi
 		r.GET("/marketplace/campaign/validation", apiMkt.GetCampaignValidation)
 		r.GET("/marketplace/campaign/reward", apiMkt.GetPageReward)
 		r.PUT("/marketplace/campaign/validation", apiMkt.UpdateCampaignValidation)
+		r.GET("/user/reward", api.GetAllReward)
 	}
 }
